Fix text wrapping

--- a/scss/_cmd-screen.scss
+++ b/scss/_cmd-screen.scss
@@ -30,5 +30,5 @@ $screen-height: 550px;
     }
 }
 #welcome-message {
-    max-width: 50vw;
+    max-width: 100%;
 }
